--- a/heart/package.json
+++ b/heart/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "./node_modules/.bin/webpack",
-    "compile:watch": "./node_modules/.bin/webpack --watch"
+    "compile:watch": "./node_modules/.bin/webpack --watch",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@types/node": "^10.5.1",
     "@types/three": "^0.92.9",
     "ts-loader": "^4.4.2",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8"
