--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,8 @@
     "compile": "node node_modules/typescript/bin/tsc -p tsconfig.json",
     "compile:watch": "node node_modules/typescript/bin/tsc --watch -p tsconfig.json",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
     "apsl-react-native-button": "^3.0.2",
@@ -30,6 +31,7 @@
     "babel-preset-react-native": "^5.0.0",
     "jest": "19.0.2",
     "react-test-renderer": "15.4.2",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2"
   },
   "jest": {
